# bio-engine

./: .gitignore  README.md  bio-engine.spec  main.py  pyproject.toml  requirements.txt
.github/workflows/: build.yml
api/: routes.py
core/: config.py  exceptions.py  logging.py  persistence.py
data/: models.py
services/: aligner.py  job_manager.py  reference.py
tasks/: worker.py
utilities/: hgvs_utils.py  sequence_utils.py  tracy_pipeline.py  vep_utils.py
